--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
 body {
   background: linear-gradient(256.47deg, #5E2AB3 2.64%, #161E6C 140.46%);
 }
+
+.inputRounded .MuiOutlinedInput-root{
+   border-radius: 27px;
+}
